Tue Apr 27 2004  Joe Allen <jhallen@world.std.com>
	*:

	More syntax files: html, pascal, vhdl, fortran, java, xml.

	Allow comment lines in syntax file string lists.

Mon Apr 26 2004  Joe Allen <jhallen@world.std.com>
	*  Makefile.am bw.c configure.ac *rc.in utf8.c syntax/perl.jsf.in
	syntax/verilog.jsf.in:

	Forgot .pm files for perl.

	Update colors for perl and verilog.

	Added mail.jsf: works nicely with mutt

	Oops- was displaying characters between 0xA0 - 0xBF as
	control characters in UTF-8.

Mon Apr 26 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c ublock.c :

	Smart backspace now always fixes the indentation.

	Indent left and right always fix indentation.

Mon Apr 26 2004  Joe Allen <jhallen@world.std.com>
	* bw.c tty.c uedit.c utf8.c *rc.in:

	Fix rtarw: was not fixing xcol.

	TAB key now does smart indenting.

	smart home goes to real home first, then indentation point.

Sun Apr 25 2004  Joe Allen <jhallen@world.std.com>
	* b.c bw.c scrn.c uedit.c utf8.c utf8.h:

	Better handling of iconv() conversion errors.

	Better handling of error UTF-8 sequences.

Sat Apr 24 2004  Joe Allen <jhallen@world.std.com>
	* utf8.c, utf8.h, scrn.c, bw.c :

	Fixed utf8 encoder for characters between 0x10000 and 0x1FFFF.

	Print <XXXX> for unicode control characters.

Fri Apr 23 2004  Joe Allen <jhallen@world.std.com>

	Added -guess_crlf and -guess_indent options.

	Update *rc files.

	Updated documentation.

Thu Apr 22 2004  Joe Allen <jhallen@world.std.com>
	* cmd.c, pw.c, pw.h, rc.c, syntax.c, syntax.h, types.h, uedit.c,
	utils.c, utils.h, syntax/c.jsf.in:

	Fixed uopen() ^] for overtype mode.

	Added 'istrings' option in syntax files for ignoring case
	in strings.

	Added ^T Y- allows you to select syntax during run time (tab
	completion works too!)

	Added ^T P- picture mode: can move and type anywhere on the screen,
	good for drawing ASCII art.

Thu Apr 22 2004  Joe Allen <jhallen@world.std.com>
	* uedit.c:
