@@ -93,17 +93,17 @@
 	"\n"		string_dq	recolor=-2
 	
 :first_digit Constant
-	*		idle	noeat	recolor=-1
+	*		idle	noeat
 	"xX"		hex
 	"."		float
 	"0-9"		first_number
 
 :hex Constant
-	*		idle	noeat	recolor=-1
+	*		idle	noeat
 	"0-9A-Fa-f"	hex
 
 :first_number Constant
-	*		idle	noeat	recolor=-1
+	*		idle	noeat
 	"0-9"		first_number
 	"."		float
 
@@ -112,16 +112,16 @@
 	"0-9"		float		recolor=-2
 
 :float Constant
-	*		idle	noeat	recolor=-1
+	*		idle	noeat
 	"eE"		epart
 	"0-9"		float
 
 :epart Constant
-	*		idle	noeat	recolor=-1
+	*		idle	noeat
 	"0-9+\-"	enum
 
 :enum Constant
-	*		idle	noeat	recolor=-1
+	*		idle	noeat
 	"0-9"		enum
 
 :ident Idle
