@@ -66,7 +66,7 @@
 # Integer constants
 
 :first_digit Constant
-	*		idle	noeat	recolor=-1
+	*		idle		noeat
 	"."		float
 	"_"		first_digit
 	"0-9"		first_digit
@@ -78,16 +78,16 @@
 	"0-9"		float		recolor=-2
 
 :float Constant
-	*		idle	noeat	recolor=-1
+	*		idle	noeat
 	"eE"		epart
 	"0-9"		float
 
 :epart	Constant
-	*		idle	noeat	recolor=-1
+	*		idle	noeat
 	"0-9+\-"	enum
 
 :enum	Constant
-	*		idle	noeat	recolor=-1
+	*		idle	noeat
 	"0-9"		enum
 
 # Identifiers
